--- a/.pages.yml
+++ b/.pages.yml
@@ -1,10 +1,10 @@
 media: assets/images
 content:
-  name: posts
-  label: Posts
-  type: collection
-  path: _posts
-  fields:
+  - name: posts
+    label: Posts
+    type: collection
+    path: _posts
+    fields:
      - { name: title, label: Title, type: string }
      - { name: date, label: Date, type: date }
      - { name: categories, label: Categories, type: string }
