--- a/.pages.yml
+++ b/.pages.yml
@@ -7,7 +7,7 @@ content:
     fields:
      - { name: title, label: Title, type: string }
      - { name: date, label: Date, type: date }
-     - { name: categories, label: Categories, type: rich-text }
+     - { name: categories, label: Categories, type: string }
      - { name: metadate, type: string, hidden: true, default: hide }
      - { name: image, label: Image, type: image }
      - { name: body, label: Body, type: rich-text }
