--- a/.pages.yml
+++ b/.pages.yml
@@ -13,7 +13,7 @@ content:
        type: date
      - name: categories
        label: Categories
-       type: string
+       type: text
      - name: metadate
        type: string
        hidden: true
