Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -16,7 +16,7 @@ content:
          time: true
      - name: categories
        label: Categories
-       type: text
+       type: string
      - name: metadate
        type: string
        hidden: true
