--- a/.pages.yml
+++ b/.pages.yml
@@ -12,7 +12,7 @@ content:
        label: Date
        type: date
        options:
-         format: datetime-local
+         format: datetime
          time: true
      - name: categories
        label: Categories
