--- a/.pages.yml
+++ b/.pages.yml
@@ -12,7 +12,7 @@ content:
        label: Date
        type: date
        options:
-         format: yyyy-MM-dd'T'HH:mm
+         format: yyyy-MM-dd HH:mm
          time: true
      - name: categories
        label: Categories
