--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ description: Pintereso is a free Jekyll theme for awesome people like you, Pinte
   like.
 logo: assets/images/logo.png
 favicon: assets/images/logo.png
-baseurl: "/MDT"
+baseurl: "/"
 avatar: assets/images/sal.jpg
 disqus: demowebsite
 email: wowthemesnet@gmail.com
