--- a/.pages.yml
+++ b/.pages.yml
@@ -29,3 +29,32 @@ content:
      - name: body
        label: Body
        type: rich-text
+  - name: flash
+    label: Flash
+    type: collection
+    path: _flash
+    fields:
+     - name: title
+       label: Title
+       type: string
+     - name: date
+       label: Date
+       type: date
+       options:
+         format: yyyy-MM-dd HH:mm
+         time: true
+     - name: categories
+       label: Categories
+       type: select
+       options:
+        values: [flash,oneanddone]
+     - name: metadate
+       type: string
+       hidden: true
+       default: hide
+     - name: image
+       label: Image
+       type: image
+     - name: body
+       label: Body
+       type: rich-text
